# crud-api-rust-prjt-18-2025

./: README.md
crud-api/: Cargo.toml  Makefile
crud-api/src/: main.rs
crud-api/src/routes/: health_route.rs
